--- a/style.css
+++ b/style.css
@@ -13,3 +13,15 @@ body {
     margin: 0 auto 0 auto;
 }
 
+#input {
+    height: 30px;
+    width: 80%;
+}
+
+.inside-input-container {
+    position: relative;
+    left: 10%;
+    top: 5%;
+    margin-bottom: 5px;
+    display: block;
+}
