--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: rgb(160, 226, 190);
+    color: rgba(0, 0, 0, 70%);
 }
 .header {
     text-align: center;
-    color:rgba(0, 0, 0, 70%);
     border: 5px;
     border-color: rgba(0, 0, 0, 50%);
 }
@@ -15,23 +15,31 @@ body {
     background-color: rgba(0, 0, 0, 30%);
     margin: 0 auto 0 auto;
     padding: 10px 0px 0px 0px;
+    border-radius: 10px;
 }
 
 #palindrome-label {
     position: relative;
     padding-left: 10%;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 #input {
-    height: 30px;
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    height: 35px;
     width: 80%;
 }
 
 #palindrome-button {
-    height: 30px;
+    height: 50px;
     width: 75%;
     background-color: rgb(160, 226, 190);
     border-color: rgb(123, 211, 163);
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-radius: 5px;
 }
 
 .inside-input-container {
@@ -44,4 +52,6 @@ body {
 
 #palindromeStatusDiv {
     text-align: center;
+    font-size: 20px;
+    font-weight: 700;
 }
